test row title overflow fix

--- a/app/src/styles/post-row.less
+++ b/app/src/styles/post-row.less
@@ -38,6 +38,7 @@
   }
 
   > .display > .info > .title {
+    flex: 1;
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
